# cmake-single-file-template

./: .gitignore  CMakeLists.txt  Readme.md  run.py  run.sh
src/: main.c  main.cpp
